<resources>
    <string name="app_name">Tag Along</string>
    <string name="dest_hint">Enter an address or city:</string>
    <string name="really_long_test_string">This is TextThis is TextThis is TextThis is TextThis is TextThis is TextThis is Text
    This is TextThis is TextThis is TextThis is TextThis is TextThis is TextThis is TextThis is TextThis is TextThis is TextThis is Text
    This is TextThis is TextThis is TextThis is TextThis is TextThis is TextThis is TextThis is TextThis is TextThis is TextThis is Text
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_directions">Map</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="password">Password</string>
    <string name="password_again">Password Again</string>
    <string name="email">Email</string>
    <string name="birthday">Birthday</string>
    <string name="gender">Gender : </string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="register">Register</string>
    <string name="register_form_text">Please fill out the registration form below.</string>
    <string name="no_field_can_be_empty">No field can be empty.</string>
    <string name="passwords_must_be_the_same">Password and Password Again field must be the same.</string>
    <string name="here_is_values">Here is values: %1$s</string>
</resources>
